# learning-causal-impact

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
notebooks/: 0-numpyro_simplest.ipynb  0.1-numpyro_scan.ipynb  0.2-numpyro_regression.ipynb  0.25-numpyro-eightschools.ipynb  0.3-xarray-example.ipynb  0.4-xarray-writeup.ipynb  1.0-pricing-example.ipynb  bayesian causal modeling with pymc.ipynb  bda3.ipynb  graphviz.ipynb  linreg_statespace.ipynb  matplotfun.ipynb  numpyro-eightschools.ipynb  numpyro.ipynb  orbit-0.0-modeling.ipynb  orbit_eda.ipynb  ortools-mip.ipynb  ortools.ipynb  pricing_example2.ipynb  simulate.ipynb  tfcausalimpact.ipynb
notebooks/causal_impact/: BN_and_docalculus.ipynb  README.md  bayesian causal modeling with pymc.ipynb  doubleml.ipynb  gaps.ipynb  simulate.ipynb
notebooks/causal_impact/archive/: causal-impact-sts-jax.ipynb  causalimpact.ipynb
notebooks/numpyro/: 0-binomial_example.ipynb  0-jax-shapes.ipynb  0-numpyro_simplest.ipynb  0.1-numpyro_scan.ipynb  0.15-numpyro_timeseries.ipynb  0.2-numpyro_regression.ipynb  0.25-numpyro-eightschools.ipynb  1.0-numpyro-pricing-example.ipynb  2.0-numpyro-hierarchical-models-intro.ipynb  2.0-numpyro-hierarchical-models-with-mcmc.ipynb  3.0-numpyro-svi.ipynb  bsts.ipynb  categorical_dist.ipynb
notebooks/ortools/: ortools.ipynb  scipy_optimize.ipynb
notebooks/pymc/: 0.0-pymc-linear_model.ipynb
notebooks/statespace/: pymc_experimental_statespace.ipynb
notebooks/tensorflow_probability/: tfp_linreg.ipynb
notebooks/xarray/: 0.4-xarray-writeup.ipynb
reports/: scan.mov  scan.pptx  scan_components.pptx
src/: README.md
src/tests/: test_sample.py
